--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,9 +14,9 @@ jobs:
       with:
         dotnet-version: 3.0.101
     - name: Build
-      run: dotnet build .\src\Hangfire.PostgreSql\ -c Release --framework netstandard2.0
+      run: dotnet build ./src/Hangfire.PostgreSql -c Release --framework netstandard2.0
     - name: Build
-      run: dotnet pack .\src\Hangfire.PostgreSql\ -c release -o out -p:TargetFrameworks=netstandard2.0
+      run: dotnet pack ./src/Hangfire.PostgreSql -c release -o out -p:TargetFrameworks=netstandard2.0
     - name: Install NuGet client
       uses: warrenbuckley/Setup-Nuget@v1
     - name: Add private GitHub registry to NuGet
