--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,11 +13,11 @@ jobs:
         dotnet-version: 3.0.101
     - name: Build
       run: dotnet build ./src/Hangfire.PostgreSql -c release --framework netstandard2.0
-    - name: Build
+    - name: Pack nuget
       run: dotnet pack ./src/Hangfire.PostgreSql -c release -o out -p:TargetFrameworks=netstandard2.0
     - name: Install NuGet client
       uses: warrenbuckley/Setup-Nuget@v1
     - name: Add private GitHub registry to NuGet
       run: nuget sources add -name "GPR" -Source https://nuget.pkg.github.com/davidroth/index.json -Username davidroth -Password ${{ secrets.GITHUB_TOKEN }}
     - name: Push generated package to GitHub registry
-      run: nuget push ./out/*.nupkg -Source "GPR" -SkipDuplicate
+      run: nuget push ./out/Hangfire.PostgreSql.1.6.2.nupkg -Source "GPR" -SkipDuplicate
